Add main.py for flask server

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
 test/
 
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+*.pyc
+
+# C extensions
+*.so
+
 # Compiled Object files
 *.slo
 *.lo
@@ -30,3 +39,4 @@ test/
 *.app
 
 HSP/HSP_CallsAndPswd\.h
+server/Keys\.py
